Cleaned up .yy considerable ... but some sort of makefile issue :-(

--- a/.cproject
+++ b/.cproject
@@ -14,7 +14,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.exe.debug.1745451588" name="Debug" parent="cdt.managedbuild.config.gnu.exe.debug" preannouncebuildStep="" prebuildStep="cd .. ; make -k -f PreBuild.mk tiger-pre-build">
+				<configuration artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.exe.debug.1745451588" name="Debug" parent="cdt.managedbuild.config.gnu.exe.debug" preannouncebuildStep="" prebuildStep="cd .. ; make -k tiger-pre-build">
 					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.1745451588." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.1345160420" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug">
 							<targetPlatform id="cdt.managedbuild.target.gnu.platform.exe.debug.429844515" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.exe.debug"/>
