chore: changed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ position.hh
 tiger-grammar.tab.cc
 tiger-grammar.tab.hh
 tiger-grammar.output
-Test-repo
-test.tig
+*.tig
+*.hera
+compile_commands.json
